--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="hello">Hello World, AndroidProjektActivity!</string>
     <string name="app_name">AndroidProjekt</string>
-    <string name="subactivity">Eine weitere Subactivity</string>
+    <string name="sf_subactivity">Eine weitere Subactivity</string>
     <string name="sf_neuerButton">Der neue Button</string>
 </resources>
